简化 DefaultDependencyManager 中的字符串格式化为 formatted 方法